--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
+    "html-to-text": "^9.0.5",
     "html-webpack-plugin": "^5.5.0",
     "i": "^0.3.7",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
+    "jodit-react": "^1.3.39",
     "mini-css-extract-plugin": "^2.4.5",
     "moment": "^2.29.4",
     "npm": "^9.2.0",
