--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-icons": "^4.4.0",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.4.0",
