--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
+    "hls.js": "^1.4.14",
     "html-to-text": "^9.0.5",
     "html-webpack-plugin": "^5.5.0",
     "i": "^0.3.7",
